Fix text flowing offscreen

--- a/_sass/detail.scss
+++ b/_sass/detail.scss
@@ -65,6 +65,7 @@ figure {
 }
 
 figcaption {
+    margin: 1em;
     font-size: smaller;
     display: table-caption;
     caption-side: bottom;
